--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+azure>=0.7.0
 boto>=2.9.8
 Django>=1.5.1
 django-allauth>=0.12.0
@@ -5,7 +6,7 @@ django-celery>=3.0.17
 django-json-field>=0.5.4
 django-yamlfield>=0.4
 djangorestframework>=2.3.6
-docutils>=0.10
+docutils>=0.11
 gevent==0.13.8
 gunicorn>=0.17.5
 PIL>=1.1.7
