--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-azure>=0.7.0
+# Deis' python library requirements
 boto>=2.9.8
 Django>=1.5.1
 django-allauth>=0.12.0
@@ -13,3 +13,12 @@ psycopg2>=2.5.1
 pyCrypto>=2.6
 PyYAML>=3.10
 South>=0.8.1
+
+# Windows Azure cloud driver -- not yet required
+# azure>=0.7.0
+
+# Generates template documentation in the Django admin.
+# docutils>=0.11
+
+# Deis developers must run "flake8" before committing code.
+# flake8>=2.0
