--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,10 @@ before_install:
   - sudo apt-get install -qq libevent-dev libpq-dev
 
 install:
-  - "pip install -r requirements.txt --use-mirrors"
-  - "pip install coveralls sphinx --use-mirrors"
+  - pip install -r requirements.txt --use-mirrors
+  - pip install -r client/requirements.txt --use-mirrors
+  - pip install -r docs/requirements.txt --use-mirrors
+  - pip install coveralls flake8 --use-mirrors
 
 before_script:
   - "psql -c 'create database deis_testing;' -U postgres"
@@ -39,8 +41,9 @@ before_script:
     EOF
 
 script:
-  - coverage run manage.py test api celerytasks client web
-  - make -C docs clean dirhtml
+  # - make flake8
+  - make coverage
+  - make -C docs
 
 after_success:
   - coveralls
