--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# Deis' python library requirements
+# Deis controller requirements
 azure>=0.7.0
 boto>=2.9.8
 Django>=1.5.1
@@ -14,12 +14,3 @@ psycopg2>=2.5.1
 pyCrypto>=2.6
 PyYAML>=3.10
 South>=0.8.1
-
-# Run "make coverage" for the % of code exercised during tests
-# coverage>=3.6
-
-# Generates template documentation in the Django admin
-# docutils>=0.11
-
-# Run "make flake8" to check python syntax and style
-# flake8>=2.0
