--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 # Deis controller requirements
-azure>=0.7.0
-boto>=2.10.0
-Django>=1.5.2
-django-allauth>=0.12.0
-django-celery>=3.0.21
-django-json-field>=0.5.5
-django-yamlfield>=0.4
-djangorestframework>=2.3.7
+azure==0.7.0
+boto==2.11.0
+celery==3.0.22  # 3.0.23 errors, see https://github.com/opdemand/deis/issues/148
+Django==1.5.2
+django-allauth==0.13.0
+django-celery==3.0.23
+django-json-field==0.5.5
+django-yamlfield==0.4
+djangorestframework==2.3.7
 gevent==0.13.8
-gunicorn>=18.0
-paramiko>=1.11.0
-psycopg2>=2.5.1
-pyCrypto>=2.6
-PyYAML>=3.10
-South>=0.8.2
+gunicorn==18.0
+paramiko==1.11.0
+psycopg2==2.5.1
+pycrypto==2.6
+PyYAML==3.10
+South==0.8.2
