--- a/Vagrantfile.local.example
+++ b/Vagrantfile.local.example
@@ -36,7 +36,7 @@ Vagrant.configure("2") do |config|
 
   # Mount the entire Deis codebase onto the VM at /vagrant
   # The first param is relative to the location of this file
-  config.vm.synced_folder "../../../", "/vagrant", owner: 'deis', group: 'deis'
+  config.vm.synced_folder ".", "/vagrant", owner: 'deis', group: 'deis'
 
   config.vm.provision :shell, inline: <<-SCRIPT
     if [ ! -d #{HOST_BAK_PATH} ]; then
