--- a/.gitmodules
+++ b/.gitmodules
@@ -18,4 +18,7 @@
 	url = https://github.com/deis/builder.git
 [submodule "images/registry"]
 	path = images/registry
-	url = https://github.com/deis/registry
+	url = https://github.com/deis/registry.git
+[submodule "images/rsyslog"]
+	path = images/rsyslog
+	url = https://github.com/deis/rsyslog.git
