Changes to Vagrant provisioner and environment to accomodate new containerisation architecture.
Major changes include:

* Provisioning is done entirely with `vagrant up`. This has not been
easy and feels inelegant. Vagrant modifies the GEM_PATH env variable
meaning that it has to be saved and injected into subsequent `knife`
commands.

* Vagrantfile.local's symlinking magic is no longer needed

* DB reset now uses JSON fixtures rather than SQL.

* New ./dshell script for conveniently getting a terminal in a
container.

* There is an accompanying change in the cookbook which causes the
docker daemon service to delay its init until after the upstart
'vagrant-mounted' event has been triggered.

Updated readme to state correct username and pass created by DB reset
script.

USe new name for Vagrant Box to force downloading new box. Other bug
fixes.

Make code that gets user's default shell OSX compatible.

Use much simpler ENV['SHELL'] to get user's shell in Vagrantfile

Added script to install dev dependencies in deis-server. Used to run tests.

Install requirements.txt and dev_requirements.txt for Travis CI

Don't save user's original GEM env, just delete vagrant's GEM env from the ruby ENV var

Added global 'dsh' shortcut for dshell and documented it

Fixes in _post_chef_run.sh

Replace pty with IO.popen for osx compatibility

Revert to capturing pre-vagrant gem env so that shelling to bundle-based commands work

Revert to using provision_controller.sh. Moved Vagrantfile out of root. WIP for @bacongobbler to test.

--- a/.gitignore
+++ b/.gitignore
@@ -59,10 +59,4 @@ Vagrantfile.local
 contrib/vagrant/knife-config/admin.pem
 contrib/vagrant/knife-config/chef-validator.pem
 contrib/vagrant/nodes/
-
-# Broken symlinks that appear when mounting the codebase onto a vagrant VM
-# See Vagrantfile.local.example
-logs
-venv
-static
-!static/
+contrib/vagrant/.host_nodes_dir
