--- a/contrib/vagrant/Vagrantfile
+++ b/contrib/vagrant/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "precise64-3.8"
+  config.vm.box = "deis-controller"
 
   # Ubuntu 12.04.3 LTS base with 3.8 kernel (ready for Docker)
   config.vm.box_url = "https://oss-binaries.phusionpassenger.com/vagrant/boxes/ubuntu-12.04.3-amd64-vbox.box"
