s/controller/server/g for consistency
this is a base deis box. Since it applies to both controllers and
nodes, there's no need to name the vagrant box one or the other.
This allows users to download the box once and never have to
download it again.

--- a/contrib/vagrant/Vagrantfile
+++ b/contrib/vagrant/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "deis-controller"
+  config.vm.box = "deis-server"
 
   # Ubuntu 12.04.3 LTS base with 3.8 kernel (ready for Docker)
   config.vm.box_url = "https://oss-binaries.phusionpassenger.com/vagrant/boxes/ubuntu-12.04.3-amd64-vbox.box"
