--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 # Deis controller requirements
+#
+# NOTE: For testing on Mac OS X Mavericks, use the following to work around a clang issue:
+# ARCHFLAGS=-Wno-error=unused-command-line-argument-hard-error-in-future pip install [pycrypto]
+#
 boto==2.23.0
 celery==3.1.8
 Django==1.6.2
