--- a/.travis.yml
+++ b/.travis.yml
@@ -18,13 +18,13 @@ before_install:
   - sudo apt-get install -qq libpq-dev
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r dev_requirements.txt coveralls
+  - pip install -r controller/requirements.txt
+  - pip install -r controller/dev_requirements.txt coveralls
 
 before_script:
   - "psql -c 'create database deis_testing;' -U postgres"
   - |
-    cat > deis/local_settings.py <<EOF
+    cat > controller/deis/local_settings.py <<EOF
     DATABASES = {
         'default': {
             'ENGINE': 'django.db.backends.postgresql_psycopg2',
