--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ before_script:
     EOF
 
 script:
-  - make flake8
-  - make coverage
+  - cd controller && make flake8
+  - cd controller && make coverage
   - make -C docs
 
 after_success:
