move `make client_binary` to client project

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,7 +1,7 @@
 
 # Install deis client locally through pip.
 install:
-	pip install . 
+	pip install .
 
 # Remove the installed copy of the deis client through pip.
 uninstall:
@@ -10,3 +10,6 @@ uninstall:
 # Clean up after setup.py droppings.
 clean:
 	rm -rf build/ dist/ *.egg-info
+
+client:
+	pyinstaller deis.spec
