Install latest pip.

--- a/builder/Dockerfile
+++ b/builder/Dockerfile
@@ -16,8 +16,11 @@ RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 36A1D7869245C8950F9
 RUN apt-get update -q
 RUN apt-get install -yq lxc-docker-0.8.0
 
+# install latest pip
+RUN wget -q https://raw.github.com/pypa/pip/master/contrib/get-pip.py && \
+    python get-pip.py && \
+    rm get-pip.py
 # install hook dependencies
-RUN apt-get install -yq python-pip
 RUN pip install pyyaml requests
 
 # install hook utilities
