Standardize install of pip 1.5.4.

--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -5,10 +5,9 @@ MAINTAINER Gabriel Monroy <gabriel@opdemand.com>
 RUN sed -i 's/main$/main universe/' /etc/apt/sources.list && apt-get update
 RUN apt-get install -y git-core build-essential python-dev \
     libevent-dev python-openssl liblzma-dev wget
-# install latest pip
-RUN wget -q https://raw.github.com/pypa/pip/1.5.4/contrib/get-pip.py && \
-    python get-pip.py && \
-    rm get-pip.py
+
+# install recent pip
+RUN wget -qO- https://raw.github.com/pypa/pip/1.5.4/contrib/get-pip.py | python -
 
 # create a registry user
 RUN useradd -s /bin/bash registry
