make SSH key and host nodes dir available
The Vagrant provider requires an SSH key and the ability to read from a folder to get all nodes available in the cluster. Without it, it will fail to provision new nodes.

--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ Vagrantfile.local
 .chef
 contrib/vagrant/knife-config/admin.pem
 contrib/vagrant/knife-config/chef-validator.pem
-contrib/vagrant/nodes/
-contrib/vagrant/.host_nodes_dir
+controller/provider/vagrant-util/nodes/
+controller/provider/vagrant-util/.host_nodes_dir
