fix(logger): change wildcard syntax
The wildcard syntax is incorrect. The proper syntax is ":omusrmsg:*". See
http://lists.adiscon.net/pipermail/rsyslog/2012-October/030846.html

--- a/logger/templates/default.conf
+++ b/logger/templates/default.conf
@@ -12,4 +12,4 @@ news.err    /var/log/news/news.err
 news.notice    -/var/log/news/news.notice
 *.=debug;auth,authpriv.none;news.none;mail.none    -/var/log/debug
 *.=info;*.=notice;*.=warn;auth,authpriv.none;cron,daemon.none;mail,news.none    -/var/log/messages
-*.emerg    *
+*.emerg    :omusrmsg:*
