bug(systemd): fix dependencies
This commit does several things:
* Refactor After and Requires to list all units on one line
* Make seed-registry job dependent upon deis-registry
* Make controller dependent on (and wait for) Builder
* Make all services only start after etcd

closes #706, #708

--- a/discovery/systemd/deis-discovery.service
+++ b/discovery/systemd/deis-discovery.service
@@ -1,8 +1,7 @@
 [Unit]
 Description=deis-discovery
-After=docker.service
-Requires=docker.service
-Requires=docker-tcp.socket
+Requires=docker.service docker-tcp.socket etcd.service
+After=docker.service etcd.service
 StandardOutput=null
 
 [Service]
