--- a/database/systemd/deis-database.service
+++ b/database/systemd/deis-database.service
@@ -1,9 +1,7 @@
 [Unit]
 Description=deis-database
-After=docker.service
-Requires=docker.service
-Requires=docker-tcp.socket
-Requires=etcd.service
+Requires=docker.service docker-tcp.socket etcd.service
+After=docker.service etcd.service
 
 [Service]
 ExecStart=/bin/bash -c '/usr/bin/docker start -a deis-database || /usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 -e HOST=172.17.8.100 -e ETCD=172.17.8.100:4001 deis/database'
