--- a/router/systemd/deis-router.service
+++ b/router/systemd/deis-router.service
@@ -1,9 +1,7 @@
 [Unit]
 Description=deis-router
-After=docker.service
-Requires=docker.service
-Requires=docker-tcp.socket
-Requires=etcd.service
+Requires=docker.service docker-tcp.socket etcd.service
+After=docker.service etcd.service
 
 [Service]
 ExecStart=/bin/bash -c '/usr/bin/docker start -a deis-router || /usr/bin/docker run --name deis-router -p 80:80 -e PUBLISH=80 -e HOST=172.17.8.100 -e ETCD=172.17.8.100:4001 deis/router'
