--- a/contrib/vagrant/Vagrantfile
+++ b/contrib/vagrant/Vagrantfile
@@ -1,35 +1,53 @@
+# -*- mode: ruby -*-
+# # vi: set ft=ruby :
+
+require_relative '../coreos/override-plugin.rb'
+
+DEIS_NUM_INSTANCES = (ENV['DEIS_NUM_INSTANCES'].to_i > 0 && ENV['DEIS_NUM_INSTANCES'].to_i) || 3
+
 Vagrant.configure("2") do |config|
-  config.vm.box = "deis-server"
+  config.vm.box = "coreos-alpha"
+  config.vm.box_url = "http://storage.core-os.net/coreos/amd64-usr/alpha/coreos_production_vagrant.box"
 
-  # Ubuntu 12.04.3 LTS base with 3.8 kernel (ready for Docker)
-  config.vm.box_url = "https://s3-us-west-2.amazonaws.com/opdemand/ubuntu-12.04.3-amd64-vbox.box"
-
-  # Avahi-daemon will broadcast the server's address as deis-controller.local
-  config.vm.host_name = "deis-controller"
-
-  # IP will be associated to 'deis-controller.local' using avahi-daemon
-  config.vm.network :private_network, ip: "192.168.61.100"
-
-  config.vm.provider :virtualbox do |vb|
-    # The Deis Controller requires at least 2G of RAM to install.
-    vb.customize ["modifyvm", :id, "--memory", "2048"]
-    
-    # Displays a friendly name in the VirtualBox GUI
-    vb.name = "deis-controller"
+  config.vm.provider :vmware_fusion do |vb, override|
+    override.vm.box_url = "http://storage.core-os.net/coreos/amd64-usr/alpha/coreos_production_vagrant_vmware_fusion.box"
   end
 
-  config.vm.synced_folder "../../", "/vagrant"
+  config.vm.provider :virtualbox do |vb, override|
+    vb.customize ["modifyvm", :id, "--memory", "4096"]
+    # Fix docker not being able to resolve private registry in VirtualBox
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
+  end
 
-  config.vm.provision :shell, inline: <<-SCRIPT
-    # Avahi-daemon broadcasts the machine's hostname to local DNS.
-    # Therefore 'deis-controller.local' in this case.
-    sudo apt-get install -yq avahi-daemon
-  SCRIPT
+  # plugin conflict
+  if Vagrant.has_plugin?("vagrant-vbguest") then
+    config.vbguest.auto_update = false
+  end
+
+  (1..DEIS_NUM_INSTANCES).each do |i|
+    config.vm.define vm_name = "deis-#{i}" do |config|
+      config.vm.hostname = vm_name
+
+      ip = "172.17.8.#{i+99}"
+      config.vm.network :private_network, ip: ip
+
+      # Enable NFS for sharing the host machine into the coreos-vagrant VM.
+      config.vm.synced_folder "../..", "/home/core/share", id: "core", :nfs => true, :mount_options => ['nolock,vers=3,udp']
+
+      # workaround missing /etc/hosts
+      config.vm.provision :shell, :inline => "echo #{ip} #{vm_name} > /etc/hosts", :privileged => true
+
+      # workaround missing /etc/environment
+      config.vm.provision :shell, :inline => "touch /etc/environment", :privileged => true
+
+      # disable update-engine to prevent reboots
+      config.vm.provision :shell, :inline => "systemctl disable update-engine && systemctl mask update-engine", :privileged => true
+
+      # user-data bootstrapping
+      config.vm.provision :file, :source => "../coreos/user-data", :destination => "/tmp/user-data"
+      config.vm.provision :shell, :inline => "mkdir -p /var/lib/coreos-vagrant && mv /tmp/user-data /var/lib/coreos-vagrant", :privileged => true
+    end
+  end
 
 end
-
-# If you want to do some funky custom stuff to your box, but don't want those things tracked by git,
-# add a Vagrantfile.local and it will be included. You can use the exact same syntax as above. For
-# example if you're low on RAM you can boot the VM with less RAM. Note that 2GB is recommended
-# for installation, but you may be able to get away with 1GB once everything is installed.
-load "Vagrantfile.local" if File.exists? "Vagrantfile.local"
