fix(*): make containers host-aware
Before, you had to hardcode the host's IP address and the IP address
to the etcd cluster. Now that we are on CoreOS, we can make some
assumptions about the system, including the default gateway and
where etcd is located.

The host IP address was always accessible through the default gateway,
so there's a change to use netstat to grep for the ip address
of the docker0 bridge. Using that, we can also assume that etcd
is clustered on the host vs. a remote container on some other node,
so we can just use the host IP address and a default port number
to retrieve the endpoint.

We should be using Fleet to manage these containers, so I removed
the dependencies on certain systemd units, since fleet already
considers those units to be running on each host. I also removed
the dependency on deis-builder to be running before deis-controller
can be started. We did this because we wanted to ensure that users
did not run into issues when running a git push, but I feel that it's
a poor decision to kill the controller if the builder is down. By that
argument, we should kill the controller when *any* component comes
down. A `fleetctl list-units` should be more than enough to ensure
that the containers are running as they should be.

--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=deis-builder
-Requires=docker.service docker-tcp.socket etcd.service
-After=docker.service etcd.service
 
 [Service]
-ExecStart=/bin/bash -c '/usr/bin/docker start -a deis-builder || /usr/bin/docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e HOST=172.17.8.100 -e PORT=2222 -e ETCD=172.17.8.100:4001 --privileged deis/builder'
-ExecStop=/usr/bin/docker stop deis-builder
+TimeoutStartSec=20m
+ExecStartPre=/usr/bin/docker pull deis/builder:latest
+ExecStart=/usr/bin/docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e PORT=2222 --privileged deis/builder
+ExecStop=/usr/bin/docker rm -f deis-builder
 
 [Install]
 WantedBy=multi-user.target
