--- a/router/systemd/deis-router.service
+++ b/router/systemd/deis-router.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=deis-router
-Requires=docker.service docker-tcp.socket etcd.service
-After=docker.service etcd.service
 
 [Service]
-ExecStart=/bin/bash -c '/usr/bin/docker start -a deis-router || /usr/bin/docker run --name deis-router -p 80:80 -e PUBLISH=80 -e HOST=172.17.8.100 -e ETCD=172.17.8.100:4001 deis/router'
-ExecStop=/usr/bin/docker stop deis-router
+TimeoutStartSec=20m
+ExecStartPre=/usr/bin/docker pull deis/router:latest
+ExecStart=/usr/bin/docker run --name deis-router -p 80:80 -e PUBLISH=80 deis/router
+ExecStop=/usr/bin/docker rm -f deis-router
 
 [Install]
 WantedBy=multi-user.target
