feat(*): add data containers
Some components like the private registry store state inside the
container. It would not be a good day for administrators if the
container restarted, as all of their mission-critical data would
be lost. Adding a bind-mount to a data container lets us restart
the containers without losing this data.

closes #703

--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -4,7 +4,8 @@ Description=deis-builder
 [Service]
 TimeoutStartSec=20m
 ExecStartPre=/usr/bin/docker pull deis/builder:latest
-ExecStart=/usr/bin/docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e PORT=2222 --privileged deis/builder
+ExecStartPre=/usr/bin/docker run --name deis-builder-data -v /buildpacks -v /var/lib/docker/graph deis/data
+ExecStart=/usr/bin/docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e PORT=2222 --volumes-from deis-builder-data --privileged deis/builder
 ExecStop=/usr/bin/docker rm -f deis-builder
 
 [Install]
