--- a/database/systemd/deis-database.service
+++ b/database/systemd/deis-database.service
@@ -4,7 +4,8 @@ Description=deis-database
 [Service]
 TimeoutStartSec=20m
 ExecStartPre=/usr/bin/docker pull deis/database:latest
-ExecStart=/usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 deis/database
+ExecStartPre=/usr/bin/docker run --name deis-database-data -v /var/lib/postgresql deis/data
+ExecStart=/usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 --volumes-from deis-database-data deis/database
 ExecStop=/usr/bin/docker rm -f deis-database
 
 [Install]
