--- a/logger/systemd/deis-logger.service
+++ b/logger/systemd/deis-logger.service
@@ -4,7 +4,8 @@ Description=deis-logger
 [Service]
 TimeoutStartSec=20m
 ExecStartPre=/usr/bin/docker pull deis/logger:latest
-ExecStart=/usr/bin/docker run --name deis-logger -p 514:514 -e PUBLISH=514 deis/logger
+ExecStartPre=/usr/bin/docker run --name deis-logger-data -v /var/log/deis deis/data
+ExecStart=/usr/bin/docker run --name deis-logger -p 514:514 -e PUBLISH=514 --volumes-from deis-logger-data deis/logger
 ExecStop=/usr/bin/docker rm -f deis-logger
 
 [Install]
