--- a/database/systemd/deis-database.service
+++ b/database/systemd/deis-database.service
@@ -3,9 +3,9 @@ Description=deis-database
 
 [Service]
 TimeoutStartSec=20m
-ExecStartPre=/usr/bin/docker pull deis/database:latest
-ExecStartPre=/usr/bin/docker run --name deis-database-data -v /var/lib/postgresql deis/data
-ExecStart=/usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 --volumes-from deis-database-data deis/database
+ExecStartPre=/usr/bin/docker pull deis/database
+ExecStartPre=/bin/bash -c "/usr/bin/docker start deis-database-data || /usr/bin/docker run --name deis-database-data -v /var/lib/postgresql deis/data"
+ExecStart=/bin/sh -c "HOST_IP=$(/bin/ifconfig eth0 | awk '/inet /{print $2}') && exec /usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 -e HOST=$HOST_IP --volumes-from deis-database-data deis/database
 ExecStop=/usr/bin/docker rm -f deis-database
 
 [Install]
