--- a/registry/systemd/deis-registry.service
+++ b/registry/systemd/deis-registry.service
@@ -3,9 +3,9 @@ Description=deis-registry
 
 [Service]
 TimeoutStartSec=20m
-ExecStartPre=/usr/bin/docker pull deis/registry:latest
-ExecStartPre=/usr/bin/docker run --name deis-registry-data -v /data deis/data
-ExecStart=/usr/bin/docker run --name deis-registry -p 5000:5000 -e PUBLISH=5000 --volumes-from deis-registry-data deis/registry
+ExecStartPre=/usr/bin/docker pull deis/registry
+ExecStartPre=/bin/bash -c "/usr/bin/docker start deis-registry-data || /usr/bin/docker run --name deis-registry-data -v /data deis/data"
+ExecStart=/bin/sh -c "HOST_IP=$(/bin/ifconfig eth0 | awk '/inet /{print $2}') && exec /usr/bin/docker run --name deis-registry -p 5000:5000 -e PUBLISH=5000 -e HOST=$HOST_IP --volumes-from deis-registry-data deis/registry"
 ExecStop=/usr/bin/docker rm -f deis-registry
 
 [Install]
