fix(registry): wait for port to become available in ExecPostStart

--- a/registry/systemd/deis-registry.service
+++ b/registry/systemd/deis-registry.service
@@ -6,7 +6,7 @@ TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "/usr/bin/docker history deis/registry >/dev/null || /usr/bin/docker pull deis/registry"
 ExecStartPre=/bin/bash -c "/usr/bin/docker start deis-registry-data || /usr/bin/docker run --name deis-registry-data -v /data deis/data"
 ExecStart=/bin/sh -c "IFACE=$(netstat -nr | grep ^0.0.0.0 | awk '{print $8}') && HOST_IP=$(/bin/ifconfig $IFACE | awk '/inet /{print $2}') && exec /usr/bin/docker run --name deis-registry -p 5000:5000 -e PUBLISH=5000 -e HOST=$HOST_IP --volumes-from deis-registry-data deis/registry"
-ExecStartPost=/bin/sh -c "IFACE=$(netstat -nr | grep ^0.0.0.0 | awk '{print $8}') && HOST_IP=$(/bin/ifconfig $IFACE | awk '/inet /{print $2}') && until cat </dev/null>/dev/tcp/$HOST_IP/5000; do sleep 1; done"
+ExecStartPost=/bin/sh -c "IFACE=$(netstat -nr | grep ^0.0.0.0 | awk '{print $8}') && HOST_IP=$(/bin/ifconfig $IFACE | awk '/inet /{print $2}') && echo "Waiting for listener on 5000/tcp..." && until cat </dev/null>/dev/tcp/$HOST_IP/5000; do sleep 1; done"
 ExecStop=/usr/bin/docker rm -f deis-registry
 
 [Install]
