fix(builder): reside beside the controller
The client makes the assumption that the builder is on the
same machine as the controller. We should eventually get this in
a distributed way, but placing it on the same machine as the
controller for now will work.

--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -10,3 +10,6 @@ ExecStop=/usr/bin/docker rm -f deis-builder
 
 [Install]
 WantedBy=multi-user.target
+
+[X-Fleet]
+X-ConditionMachineOf=deis-controller.service
