feat(logger): add new syslog daemon based on https://github.com/ziutek/syslog

--- a/logger/Dockerfile
+++ b/logger/Dockerfile
@@ -1,23 +1,25 @@
 FROM deis/base:latest
 MAINTAINER Gabriel Monroy <gabriel@opdemand.com>
 
-# install rsyslog from rsyslog.com
-RUN echo "deb http://ppa.launchpad.net/adiscon/v7-stable/ubuntu precise main" > /etc/apt/sources.list.d/rsyslog.list
-RUN echo "deb-src http://ppa.launchpad.net/adiscon/v7-stable/ubuntu precise main" >> /etc/apt/sources.list.d/rsyslog.list
-RUN gpg --recv-keys --keyserver keyserver.ubuntu.com AEF0CF8E
-RUN gpg --export --armor AEF0CF8E | sudo apt-key add -
-RUN apt-get update
-RUN apt-get install -yq --force-yes rsyslog
+# install go runtime
+RUN wget -O /tmp/go1.2.1.linux-amd64.tar.gz -q https://go.googlecode.com/files/go1.2.1.linux-amd64.tar.gz
+RUN tar -C /usr/local -xzvf /tmp/go1.2.1.linux-amd64.tar.gz
 
-# create /var/log/deis for holding logs (access via bind mount)
-RUN mkdir -p /var/log/deis
-
-# install latest etcdctl including no-sync options
-RUN wget -q https://s3-us-west-2.amazonaws.com/deis/etcdctl.no-sync -O /usr/local/bin/etcdctl
-RUN chmod +x /usr/local/bin/etcdctl
+# prepare go environment
+RUN mkdir -p /go
+ENV GOPATH /go
+ENV PATH /usr/local/bin:/usr/bin:/bin:/sbin:/usr/local/go/bin
 
 # add the current build context to /app
 ADD . /app
+ADD syslog /go/src/syslog
+ADD syslogd /go/src/syslogd
+
+# compile the binary
+RUN cd /go/src/syslogd && go install -v syslogd
+
+# create /var/log/deis for holding logs (access via bind mount)
+RUN mkdir -p /var/log/deis
 
 # prepare execution environment
 WORKDIR /app
