fix(docker): remove patched docker, switch to deis/base data container
While we much prefer the lightweight deis/data container based on tianon/true, we're waiting on the following commit: https://github.com/dotcloud/docker/commit/3d9cd1e5f102d5e59011ec4baca2662f3dacbad4

--- a/database/systemd/deis-database.service
+++ b/database/systemd/deis-database.service
@@ -4,7 +4,7 @@ Description=deis-database
 [Service]
 TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "/usr/bin/docker history deis/database >/dev/null || /usr/bin/docker pull deis/database"
-ExecStartPre=/bin/bash -c "/usr/bin/docker start deis-database-data || /usr/bin/docker run --name deis-database-data -v /var/lib/postgresql deis/data"
+ExecStartPre=/bin/bash -c "/usr/bin/docker start deis-database-data || /usr/bin/docker run --name deis-database-data -v /var/lib/postgresql deis/base /bin/true"
 ExecStart=/bin/sh -c "IFACE=$(netstat -nr | grep ^0.0.0.0 | awk '{print $8}') && HOST_IP=$(/bin/ifconfig $IFACE | awk '/inet /{print $2}') && exec /usr/bin/docker run --name deis-database -p 5432:5432 -e PUBLISH=5432 -e HOST=$HOST_IP --volumes-from deis-database-data deis/database
 ExecStop=/usr/bin/docker rm -f deis-database
 
