fix(github): update URL references to opdemand/deis
Refs #711.

--- a/logger/Dockerfile
+++ b/logger/Dockerfile
@@ -12,10 +12,10 @@ ENV PATH /usr/local/bin:/usr/bin:/bin:/sbin:/usr/local/go/bin
 
 # add the current build context to /app
 ADD . /app
-ADD . /go/src/github.com/opdemand/deis/logger
+ADD . /go/src/github.com/deis/deis/logger
 
 # compile the binary
-RUN cd /go/src/github.com/opdemand/deis/logger/syslogd && go install -v .
+RUN cd /go/src/github.com/deis/deis/logger/syslogd && go install -v .
 
 # create /var/log/deis for holding logs (access via bind mount)
 RUN mkdir -p /var/log/deis
