fix(services): manage dependencies manually
Since fleet's dependency management cross-cluster is lacking
(see coreos/fleet#338), we resort to starting the services in
a certain order. We also remove Requires=/After= if the dependency
could potentially exist on another server in the cluster.
We're essentially waiting for X-Requires/X-After to be implemented
in fleet.

Also, we make the contrib/ scripts use this Makefile to start
services so we don't repeat logic. Lastly, fleet version checking
is added to the Makefile so that it will error if fleetctl locally
is a different version than the server - many unstable/incomplete
changes are in master.

fixes #810, #805

--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -1,7 +1,5 @@
 [Unit]
 Description=deis-builder
-Requires=deis-registry.service
-After=deis-registry.service
 
 [Service]
 TimeoutStartSec=20m
@@ -13,5 +11,7 @@ ExecStop=/usr/bin/docker rm -f deis-builder
 [Install]
 WantedBy=multi-user.target
 
+# We only need this so that when we start controller, it's guaranteed to be scheduled
+# (If logger and builder are on separate machines, controller can never be scheduled)
 [X-Fleet]
-X-ConditionMachineOf=deis-controller.service
+X-ConditionMachineOf=deis-logger.service
