--- a/router/systemd/deis-router.service
+++ b/router/systemd/deis-router.service
@@ -2,9 +2,10 @@
 Description=deis-router
 
 [Service]
+EnvironmentFile=/etc/environment
 TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "/usr/bin/docker history deis/router >/dev/null || /usr/bin/docker pull deis/router"
-ExecStart=/bin/sh -c "IFACE=$(netstat -nr | grep ^0.0.0.0 | awk '{print $8}') && HOST_IP=$(/bin/ifconfig $IFACE | awk '/inet /{print $2}') && exec /usr/bin/docker run --name deis-router -p 80:80 -e PUBLISH=80 -e HOST=$HOST_IP deis/router"
+ExecStart=/bin/sh -c "docker run --name deis-router -p 80:80 -e PUBLISH=80 -e HOST=$COREOS_PRIVATE_IPV4 deis/router"
 ExecStop=/usr/bin/docker rm -f deis-router
 
 [Install]
