--- a/builder/systemd/deis-builder.service
+++ b/builder/systemd/deis-builder.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=deis-builder
+Requires=deis-controller.service
+After=deis-controller.service
 
 [Service]
 EnvironmentFile=/etc/environment
@@ -7,12 +9,11 @@ TimeoutStartSec=20m
 ExecStartPre=/bin/sh -c "/usr/bin/docker history deis/builder >/dev/null || /usr/bin/docker pull deis/builder"
 ExecStartPre=/bin/bash -c "/usr/bin/docker start deis-builder-data || /usr/bin/docker run --name deis-builder-data -v /var/lib/docker deis/base /bin/true"
 ExecStart=/bin/sh -c "docker run --name deis-builder -p 2222:22 -e PUBLISH=22 -e HOST=$COREOS_PRIVATE_IPV4 -e PORT=2222 --volumes-from deis-builder-data --privileged deis/builder"
+ExecStartPost=/bin/sh -c "echo 'Waiting for builder on 2222/tcp...' && until cat </dev/null>/dev/tcp/$COREOS_PRIVATE_IPV4/2222; do sleep 1; done"
 ExecStop=/usr/bin/docker rm -f deis-builder
 
 [Install]
 WantedBy=multi-user.target
 
-# We only need this so that when we start controller, it's guaranteed to be scheduled
-# (If logger and builder are on separate machines, controller can never be scheduled)
 [X-Fleet]
-X-ConditionMachineOf=deis-logger.service
+X-ConditionMachineOf=deis-controller.service
